# steganography-tool

./: CMakeLists.txt  LICENSE  README.md
include/: BMP.hpp  CLI.hpp  GIF.hpp  PPM.hpp  image.hpp  utils.hpp
src/: BMP.cpp  CLI.cpp  GIF.cpp  PPM.cpp  image.cpp  main.cpp  utils.cpp
